Button alignment, font size fixes

--- a/buttons.css
+++ b/buttons.css
@@ -3,14 +3,14 @@
     position: relative;
     overflow: hidden; /* This doesn't let the button change size */
     border: none;
-    font-size: 14px;
+
     cursor: pointer;
     color: #fff;
     width: 8em;
-    height: 3em;
+    padding-top: 12px;
+    padding-bottom: 12px;
     padding-left: 12px;
     padding-right: 12px;
-    line-height: 2em;
     text-align: center;
     background: linear-gradient(90deg, #272727, #404040, #ffffff, #272727);
     background-size: 300%;
@@ -68,7 +68,6 @@
     padding: 12px;
     width: 130px;
     cursor: pointer;
-    margin: 5px;
    }
    .transparentbutton:hover {
     background-color: #ffffff1a;
@@ -78,6 +77,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 500px;
-    width: 350px;
+    margin-top: 400px;
+    width: 325px;
    }
