--- a/mobile.css
+++ b/mobile.css
@@ -8,7 +8,7 @@
 }
 body{
     background-color: rgb(0, 0, 0);
-    padding-top: 45px;
+    padding-top: 55px;
 }
 .navbar {
     padding-left: 20px;  /* Reduced padding */
